# core

./: .gitignore  CMakeLists.txt  LICENSE-MIT.md  LICENSE.md  Qubic.sln  Qubic.vcxproj  Qubic.vcxproj.filters  README.md  README_CLANG.md  SEAMLESS.md  cli.md  concurrency_util.h  fix.patch  four_q.h  kangaroo_twelve.h  m256_util.h  public_settings.h  qpi.h  qubic.cpp  score.h  score_reference.h  smart_contracts.h  tests.md  text_output.h  time.h  uefi.h
.github/workflows/: build-tests.yml  ci.yml  contract-verify.yml  deploy.yml  efi-build-develop.yml  linux-build.yml  release.yml  (+1 more)
benchmark_uefi/: CMakeLists.txt  benchmark.vcxproj  benchmark_main.cpp
cmake/: CompilerSetup.cmake
doc/: contracts.md  contracts_oracles.md  contracts_proposals.md  contributing.md  custom_mining.md  execution_fees.md  protocol.md  revenue_model_comparison.md
lib/platform_efi/: CMakeLists.txt  edk2_debug.c  enable_avx.h  platform_efi.vcxproj  processor.cpp  sleep.cpp  uefi.h  uefi_globals.cpp  uefi_globals.h
lib/platform_os/: CMakeLists.txt  edk2_debug.c  platform_os.vcxproj  processor.cpp  sleep.cpp
qubics/: Qx.h
src/: CMakeLists.txt  Qubic.vcxproj  Qubic.vcxproj.filters  assets.h  common_buffers.h  exchange_connect.h  four_q.h  kangaroo_twelve.h  logging.h  memory_util.h  network_messages.h  peers.h  private_settings.h  public_settings.h  qpi.h  qubic.cpp  revenue.h  score.h  score_cache.h  score_reference.h  smart_contracts.h  spectrum.h  system.h  tcp4.h  text_output.h  tick_storage.h  tick_txs_storage.h  tx_status_request.h  txs_pool.h  vote_counter.h
src/K12/: kangaroo_twelve_xkcp.h
src/addons/: tx_status_request.h
src/assets/: assets.h  net_msg_impl.h
src/contract_core/: contract_action_tracker.h  contract_def.h  contract_exec.h  execution_time_accumulator.h  ipo.h  pre_qpi_def.h  qpi_asset_impl.h  qpi_collection_impl.h  qpi_hash_map_impl.h  qpi_ipo_impl.h  qpi_linked_list_impl.h  qpi_mining_impl.h  qpi_oracle_impl.h  qpi_proposal_voting.h  qpi_spectrum_impl.h  qpi_system_impl.h  qpi_ticking_impl.h  qpi_trivial_impl.h  stack_buffer.h
src/contracts/: Airdrop.h  ComputorControlledFund.h  ComputorControlledFund_old.h  Dummy.h  Dummy1.h  Dummy2.h  EmptyTemplate.h  Escrow.h  EthBridge.h  Flipper.h  FootBallTest.h  GGWP.h  GeneralQuorumProposal.h  HM25.h  HashStore.h  LastTickJackpot.h  MsVault.h  MsVault_v1.h  MyLastMatch.h  Nostromo.h  PFP.h  Pulse.h  QAGENT.h  QAirdrop.h  QBond.h  QBond_old.h  QBridge.h  QDuel.h  QIP.h  QPortal.h  QRaffle.h  QReservePool.h  QSurv.h  QThirtyFour.h  QUtil.h  QVAULT.h  Qassand.h  Qassandra.h  Qbay.h  Qbay_old.h  (+25 more)
src/extensions/: cxxopts.h  empty_private_settings.h  http.h  overload.h  utils.h
src/extensions/http/: http.h  utils.h
src/extensions/http/controller/: live_controller.h  rpc_live_controller.h  rpc_queryv2_controller.h  rpc_stats_controller.h
src/files/: files.h
src/logging/: logging.h  net_msg_impl.h
src/mining/: custom_qubic_mining_storage.cpp  custom_qubic_mining_storage.h  mining.h  score_addition.h  score_common.h  score_engine.h  score_hyperidentity.h
src/network_core/: peers.h  tcp4.h
src/network_messages/: README.md  all.h  assets.h  broadcast_message.h  common_def.h  common_response.h  computors.h  contract.h  custom_mining.h  entity.h  execution_fees.h  header.h  logging.h  network_message_type.h  oracles.h  public_peers.h  revenue_data.h  special_command.h  system_info.h  tick.h  transactions.h
src/oracle_core/: core_om_network_messages.h  net_msg_impl.h  oracle_engine.h  oracle_interfaces_def.h  oracle_transactions.h  snapshot_files.h
src/oracle_interfaces/: AIVerify.h  DogeShareValidation.h  EvmCommon.h  EvmErc20Transfer.h  Football.h  Mock.h  Price.h
src/oracles/: Price.h  oracle_machines.h
src/platform/: algorithm.h  assert.h  common_types.h  concurrency.h  concurrency_impl.h  console_logging.h  custom_stack.asm  custom_stack.h  custom_stack.nasm  debugging.h  file_io.h  global_var.h  logging.h  m256.h  memblob.h  memory.h  memory_util.h  msvc_polyfill.h  profiling.h  quorum_value.h  random.h  read_write_lock.h  stack_size_tracker.h  swap_uint128.h  time.h  time_stamp_counter.h  uefi.h  uint128.h  virtual_memory.h
src/smart_contracts/: QUtil.h  Quottery.h  Qx.h  README.md  Random.h  math_lib.h  qpi.h  useful_functions.h
src/spectrum/: special_entities.h  spectrum.h
src/ticking/: execution_fee_counter.h  execution_fee_report_collector.h  pending_txs_pool.h  stable_computor_index.h  tick_storage.h  ticking.h  txs_pool.h
test/: CMakeLists.txt  CmakeLIsts.txt  README.md  all_contract_tests.cpp  assets.cpp  common_def.cpp  contract_PFP.cpp  contract_ccf.cpp  contract_core.cpp  contract_escrow.cpp  contract_ethbridge.cpp  contract_flipper.cpp  contract_ggwp.cpp  contract_gqmprop.cpp  contract_hashstore.cpp  contract_msvault.cpp  contract_nostromo.cpp  contract_pulse.cpp  contract_qagent.cpp  contract_qassand.cpp  contract_qassandra.cpp  contract_qbay.cpp  contract_qbond.cpp  contract_qduel.cpp  contract_qearn.cpp  contract_qip.cpp  contract_qportal.cpp  contract_qraffle.cpp  contract_qrp.cpp  contract_qrwa.cpp  contract_qsb.cpp  contract_qsurv.cpp  contract_qswap.cpp  contract_qtf.cpp  contract_qugate.cpp  contract_quottery.cpp  contract_qusino.cpp  contract_qutil.cpp  contract_qvault.cpp  contract_qx.cpp  (+56 more)
test/contract_tests/: contract_ccf.cpp  contract_core.cpp  contract_escrow.cpp  contract_ggwp.cpp  contract_gqmprop.cpp  contract_msvault.cpp  contract_nostromo.cpp  contract_pulse.cpp  contract_qbay.cpp  contract_qbond.cpp  contract_qduel.cpp  contract_qearn.cpp  contract_qip.cpp  contract_qraffle.cpp  contract_qrp.cpp  contract_qrwa.cpp  contract_qswap.cpp  contract_qtf.cpp  contract_quottery.cpp  contract_qusino.cpp  contract_qutil.cpp  contract_qvault.cpp  contract_qx.cpp  contract_rl.cpp  contract_testex.cpp  contract_vottunbridge.cpp
test/data/: custom_revenue.eoe  samples_20240815.csv  scores_20240815.csv  scores_20240821.csv  scores_20240911.csv  scores_addition.csv  scores_addition_detour.csv  scores_random2.csv  scores_v3.csv  scores_v4.csv  scores_v5.csv
tools/: tools.sln
(+19 files in other folders)
